--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -27,7 +27,7 @@
                   </td>
                   <br/>
                       <label class="textoResul">Resultado:</label>
-                      <p class="resultado" name='resultado'></p>
+                      <p id="resultado" class="resultado" name='resultado'></p>
               </div>
         </div>
     </body>
