add querySelector no C

--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -25,9 +25,10 @@
                     <input type="button" class='divisao' onclick='Divisao()' value="/">
                     <input type="button" class='button' onclick='C()' value="C"> 
                   </td>
-                  <br/>
-                      <label class="textoResul">Resultado:</label>
-                      <p id="result" class="resultado" name='resultado'></p>
+              </div>
+              <div>
+                  <label class="textoResul">Resultado:</label>
+                  <p class="resultado" name='resultado'></p>
               </div>
         </div>
     </body>
